README.html updated.

--- a/README.html
+++ b/README.html
@@ -37,6 +37,11 @@
 		</div>
 
 		<div>
+			<strong>Изменения от 22.06.13:</strong><br />
+			<ul>
+				<li>При атаке на игрока выводится уведомление. Таким образом, окно браузера можно сворачивать, не боясь пропустить атаку.</li>
+			</ul>
+			<hr />
 			<strong>На текущий момент (21.06.13) реализовано следующее:</strong><br />
 			<ul>
 				<li>Уровни зданий в городе. В отличии от ikaeasy, расширение не проверяет, можно ли постройку улучшить, сколько ресурсов останется после улучшения.</li>
