--- a/README.html
+++ b/README.html
@@ -40,6 +40,7 @@
 			<strong>Изменения от 22.06.13:</strong><br />
 			<ul>
 				<li>При атаке на игрока выводится уведомление. Таким образом, окно браузера можно сворачивать, не боясь пропустить атаку.</li>
+				<li>Уведомления дипломатии.</li>
 			</ul>
 			<hr />
 			<strong>На текущий момент (21.06.13) реализовано следующее:</strong><br />
