Notifications' text tranlated to russian language.

--- a/README.html
+++ b/README.html
@@ -37,6 +37,11 @@
 		</div>
 
 		<div>
+			<strong>Изменения от 24.06.13:</strong><br />
+			<ul>
+				<li>Текст уведомлений переведен на русский язык.</li>
+			</ul>
+			<hr />
 			<strong>Изменения от 22.06.13:</strong><br />
 			<ul>
 				<li>При атаке на игрока выводится уведомление. Таким образом, окно браузера можно сворачивать, не боясь пропустить атаку.</li>
