--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <hr><h3>
 <a name="-1" class="anchor" href="#-1"><span class="octicon octicon-link"></span></a>Скриншоты</h3>
 
-<p><img src="levels.png" alt=""><img src="transporter.png" alt=""><img src="notifications.png" alt=""></p>
+<p><img src="images/levels.png" alt="" title="Уровень постройки"><br /><img src="images/transporter.png" alt="" title="Транспортровщик"><br /><img src="images/notifications.png" alt="" title="Уведомления"></p>
       </section>
     </div>
     <footer>
