fix: show notifications while viewing island or world.

--- a/README.html
+++ b/README.html
@@ -37,6 +37,11 @@
 		</div>
 
 		<div>
+			<strong>Изменения от 25.06.13:</strong><br />
+			<ul>
+				<li>Из-за ошибки уведомления показывались только при просмотре города. Исправлено.</li>
+			</ul>
+			<hr />
 			<strong>Изменения от 24.06.13:</strong><br />
 			<ul>
 				<li>Текст уведомлений переведен на русский язык.</li>
