feature: transporter: highligting of cities not owned by player.

--- a/README.html
+++ b/README.html
@@ -37,6 +37,12 @@
 		</div>
 
 		<div>
+			<strong>Изменения от 26.06.13:</strong><br />
+			<ul>
+				<li>Города, не принадлежащие игроку, в окне транспортировщика теперь подсвечиваются.</li>
+				<li>Окно транспортировщика теперь можно закрыть кнопкой в этом же окне.</li>
+			</ul>
+			<hr />
 			<strong>Изменения от 25.06.13:</strong><br />
 			<ul>
 				<li>Из-за ошибки уведомления показывались только при просмотре города. Исправлено.</li>
