fix: mouse cursor style for transporter's close button.

--- a/README.html
+++ b/README.html
@@ -37,6 +37,11 @@
 		</div>
 
 		<div>
+			<strong>Изменения от 28.06.13:</strong><br />
+			<ul>
+				<li>Кнопка закрытия окна транспортировщика теперь меняет курсор на "правильный".</li>
+			</ul>
+			<hr />
 			<strong>Изменения от 26.06.13:</strong><br />
 			<ul>
 				<li>Города, не принадлежащие игроку, в окне транспортировщика теперь подсвечиваются.</li>
