fix: notifications' spam while playing on several realms.

--- a/README.html
+++ b/README.html
@@ -37,6 +37,11 @@
 		</div>
 
 		<div>
+			<strong>Изменения от 30.06.13:</strong><br />
+			<ul>
+				<li>При одновременной игре на нескольких мирах уведомления больше не спамят.</li>
+			</ul>
+			<hr />
 			<strong>Изменения от 28.06.13:</strong><br />
 			<ul>
 				<li>Кнопка закрытия окна транспортировщика теперь меняет курсор на "правильный".</li>
