--- a/README.html
+++ b/README.html
@@ -40,6 +40,7 @@
 			<strong>Изменения от 30.06.13:</strong><br />
 			<ul>
 				<li>При одновременной игре на нескольких мирах уведомления больше не спамят.</li>
+				<li>Вместо фоновой html страницы теперь используется только js.</li>
 			</ul>
 			<hr />
 			<strong>Изменения от 28.06.13:</strong><br />
